[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
rusteron-archive = { version = "0.2.4", features = ["static", "precompile", "extra-logging", "backtrace"] }
